[workspace]
members = ["simple-dst-derive"]

[package]
name = "simple-dst"
version = "0.1.0"
edition = "2024"
description = "Traits for implementing and using custom DSTs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/FintasticMan/simple-dst"
keywords = ["dst", "types", "slice"]
categories = ["data-structures", "memory-management", "no-std", "no-std::no-alloc", "rust-patterns"]

[dependencies]
simple-dst-derive = { version = "0.1.0", optional = true, path = "simple-dst-derive" }

[features]
default = ["alloc", "derive"]
alloc = []
derive = ["simple-dst-derive"]
