[package]
name = "simple-dst-derive"
version = "0.1.0"
edition = "2024"
description = "Derive macro for the simple-dst crate."
license = "MIT OR Apache-2.0"
repository = "https://github.com/FintasticMan/simple-dst"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"
